--- a/hmwk/hmwk01/hmwk01.ipynb
+++ b/hmwk/hmwk01/hmwk01.ipynb
@@ -7,9 +7,9 @@
     "# Homework 1: Data Cleaning and Exploratory Data Analysis \n",
     "***\n",
     "\n",
-    "**Name**: \n",
+    "**Name**: Sam Cuthbertson\n",
     "\n",
-    "**Section**: (001 or 002)\n",
+    "**Section**: 001\n",
     "***\n",
     "\n",
     "This assignment is due on Moodle by **5pm on Friday September 15th**. Your solutions to theoretical questions should be done in Markdown directly below the associated question.  Your solutions to computational questions should include any specified Python code and results as well as written commentary on your conclusions.  Remember that you are encouraged to discuss the problems with your classmates, but **you must write all code and solutions on your own**.   \n",
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -480,9 +480,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def clean_election_data():\n",
@@ -516,9 +514,7 @@
   {
    "cell_type": "code",
    "execution_count": 123,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def winners_and_margins(df):\n",
@@ -566,7 +562,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
