--- a/hmwk/hmwk01/hmwk01.ipynb
+++ b/hmwk/hmwk01/hmwk01.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -147,13 +147,19 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "\\begin{align}\n",
+    "\\frac{1}{n}\\sum_{k=1}^n x_k &= \\bar{x}_{n-1} + \\frac{x_n - \\bar{x}_{n-1}}{n} \\\\\n",
+    "    &= \\frac{1}{n-1}\\sum_{k=1}^{n-1} x_k + \\frac{x_n - \\frac{1}{n-1}\\sum_{k=1}^{n-1} x_k }{n} \\\\\n",
+    "    &= \\frac{1}{n}\\sum_{k=1}^{n}x_k - \\frac{x_n}{n} + \\frac{x_n}{n} - \\frac{\\frac{1}{n-1}\\sum_{k=1}^{n-1} x_k }{n} \\\\    \n",
+    "    &= \\frac{1}{n}\\sum_{k=1}^{n}x_k - \\frac{\\frac{1}{n}\\sum_{k=1}^{n}x_k -\\frac{x_n}{n}}{n} \\\\\n",
+    "    &= \\frac{1}{n}\\sum_{k=1}^{n}x_k - \\frac{1}{n^2}\\sum_{k=1}^{n}x_k -\\frac{x_n}{n^2} \\\\\n",
+    "\\end{align}"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -240,7 +246,7 @@
    "source": [
     "** If there was male chivalry, we should see much lower survival rates in males compared to the survival rates of females. **\n",
     "\n",
-    "** If there was class warefare, we should see much higher survival rates in certain classes compared to other classes. **"
+    "** If there was class warfare, we should see much higher survival rates in certain classes compared to other classes. **"
    ]
   },
   {
@@ -437,7 +443,9 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "dfBabyDirt = pd.read_csv('http://www.stat.berkeley.edu/~statlabs/data/babies.data', delim_whitespace=True)"
@@ -612,21 +620,110 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>STATE</th>\n",
+       "      <th>D</th>\n",
+       "      <th>CANDIDATE NAME</th>\n",
+       "      <th>GENERAL PERCENT</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Byrne, Bradley</td>\n",
+       "      <td>68,16%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>1</td>\n",
+       "      <td>LeFlore, Burton R.</td>\n",
+       "      <td>31,71%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Scattered</td>\n",
+       "      <td>0,13%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Roby, Martha</td>\n",
+       "      <td>67,34%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>32,56%</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     STATE  D      CANDIDATE NAME GENERAL PERCENT\n",
+       "0  Alabama  1      Byrne, Bradley          68,16%\n",
+       "1  Alabama  1  LeFlore, Burton R.          31,71%\n",
+       "2  Alabama  1           Scattered           0,13%\n",
+       "5  Alabama  2        Roby, Martha          67,34%\n",
+       "6  Alabama  2                 NaN          32,56%"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def clean_election_data():\n",
     "    '''\n",
     "    Function to clean election data \n",
     "    '''\n",
+    "    import math\n",
     "    \n",
     "    # read in dirty data \n",
     "    df = pd.read_csv(\"2014_election_results.csv\")\n",
-    "    \n",
-    "    return dfClean"
+    "    dfClean = df.dropna(subset=[\"STATE\", \"D\", \"GENERAL PERCENT\"]).copy()\n",
+    "    for index, row in dfClean.iterrows():\n",
+    "        if(row[\"CANDIDATE NAME\"] and row[\"CANDIDATE NAME\"] != \"Scattered\"):\n",
+    "            #if(row[\"CANDIDATE NAME (Last)\"] == \"NaN\" or row[\"CANDIDATE NAME (Last)\"] == \"Scattered\"):\n",
+    "            row[\"CANDIDATE NAME (Last)\" == \"UNKNOWN\"]\n",
+    "            #else:\n",
+    "                #row[\"CANDIDATE NAME\"] = row[\"CANDIDATE NAME (Last)\"]\n",
+    "    dfClean = dfClean[[\"STATE\", \"D\", \"CANDIDATE NAME\", \"GENERAL PERCENT\"]]\n",
+    "    return dfClean\n",
+    "\n",
+    "clean_election_data().head()"
    ]
   },
   {
