--- a/hmwk/hmwk02/hmwk02.ipynb
+++ b/hmwk/hmwk02/hmwk02.ipynb
@@ -848,7 +848,9 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def score(df):\n",
@@ -933,7 +935,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.4"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
