--- a/hmwk/hmwk02/hmwk02.ipynb
+++ b/hmwk/hmwk02/hmwk02.ipynb
@@ -75,7 +75,14 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "\\begin{align*}\n",
+    "    P(\\text{double-headed | heads}) &= \\frac{ P(\\text{heads | double-headed}) P(\\text{double-headed}) }{P(heads)} \\\\ \n",
+    "    &= \\frac{ 1 * 1/100}{101/200} \\\\\n",
+    "    \\\\\n",
+    "    &= \\frac{2}{101} \\approx 1.98\\%\n",
+    "\\end{align*}"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -87,7 +94,19 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "\\begin{align*}\n",
+    "    P(\\text{double-headed | 2 heads}) &= \\frac{ P(\\text{2 heads | double-headed}) P(\\text{double-headed}) }{P(\\text{2 heads})} \\\\ \n",
+    "    &= \\frac{ 1 * 1/100}{101/400} \\\\\n",
+    "    \\\\\n",
+    "    &= \\frac{4}{101} \\approx 3.96\\% \\\\\n",
+    "    &\\ldots \\\\\n",
+    "    P(\\text{double-headed | 26 heads}) &= \\frac{ P(\\text{26 heads | double-headed}) P(\\text{double-headed}) }{P(\\text{26 heads})} \\\\ \n",
+    "    &= \\frac{1 * 1/100}{101/5200} \\\\\n",
+    "    \\\\\n",
+    "    &= \\frac{52}{101} \\approx 52.49\\%\n",
+    "\\end{align*}"
+   ]
   },
   {
    "cell_type": "markdown",
