--- a/hmwk/hmwk02/hmwk02.ipynb
+++ b/hmwk/hmwk02/hmwk02.ipynb
@@ -223,13 +223,19 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "\\begin{align*}\n",
+    "    P(\\text{E | M one stop ago}) &= P(E | P | M) + P(E | U | M) \\\\\n",
+    "    \\\\\n",
+    "    &= \\frac{1}{2}\\frac{1}{4} + \\frac{1}{4}\\frac{1}{4} \\\\\n",
+    "    \\\\\n",
+    "    &= \\frac{3}{16}\n",
+    "\\end{align*}"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -239,13 +245,19 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "\\begin{align*}\n",
+    "    P(\\text{U | M}) \\cup P(\\text{U | M one stop ago}) &= P(U | M) + P(U | S | M) + P(U | E | M) \\\\\n",
+    "    \\\\\n",
+    "    &= \\frac{1}{4} + \\frac{1}{2}\\frac{1}{4} + \\frac{1}{4}\\frac{1}{4} \\\\\n",
+    "    \\\\\n",
+    "    &= \\frac{7}{16}\n",
+    "\\end{align*}"
+   ]
   },
   {
    "cell_type": "markdown",
