--- a/hmwk/hmwk02/hmwk02.ipynb
+++ b/hmwk/hmwk02/hmwk02.ipynb
@@ -125,7 +125,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "$\\textbf{One of $GWE$, $MGE$, $MMTGW$, $MMTMG$, $MMTMMGW$, $MMTMMMG$, $MMTMMMMGW$, ...}$"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -137,7 +139,12 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "\\begin{align*}\n",
+    "    P(W \\mid E) &= P(GW) \\\\\n",
+    "        &= p\n",
+    "\\end{align*}"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -149,7 +156,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "**In possible outcomes where $T$ is present, $W$ is present half the time. In possible outcomes without $T$, $W$ is also present half the time.**"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -161,13 +170,21 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "** Note: As W and T are independent, $P(W\\mid T) = P(W)$. **\n",
+    "\n",
+    "\\begin{align*}\n",
+    "    P(W) &= p(1-q) + (2pq-p-q+1)P(W\\mid T) \\\\\n",
+    "        &= p-q + (2pq-p+q+1)P(W) \\\\\n",
+    "        &= p-\n",
+    "\\end{align*}"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Part E**: Use the fact from **Part B** that $P(W \\mid T) = P(W)$ to determine $P(W)$ in terms of $p$ and $q$. "
+    "**Part E**: Use the fact from **Part C** that $P(W \\mid T) = P(W)$ to determine $P(W)$ in terms of $p$ and $q$. "
    ]
   },
   {
