--- a/inclass-notebooks/lecture08notebook.ipynb
+++ b/inclass-notebooks/lecture08notebook.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -114,13 +114,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "Geometric"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -156,6 +156,7 @@
     "def pmf_geo(p):\n",
     "    \n",
     "    pmf = np.zeros(50)\n",
+    "    p(p-1)^(k-1)\n",
     "    \n",
     "    return pmf "
    ]
