--- a/resources/computing/NumpyPandasTutorial.ipynb
+++ b/resources/computing/NumpyPandasTutorial.ipynb
@@ -537,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -750,7 +750,9 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "top_tech2016 = pd.Series([215.6, 173.9, 135.9, 135.1, 90.2], \n",
