--- a/hmwk/hmwk02/hmwk02.ipynb
+++ b/hmwk/hmwk02/hmwk02.ipynb
@@ -212,7 +212,9 @@
    "metadata": {
     "collapsed": true
    },
-   "source": []
+   "source": [
+    "**As the probability of winning is independent of either T or E, the probability of winning given T is the same as the probability of winning given E, which is the same as the pure probability of winning. **"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -225,7 +227,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**De**"
+    "**Using independent variables as 'filters' seems to be a useful tool, as it allows us to look at a finite number of cases instead of a potentially infinite number of cases (as we would look at trying to calculate $P(W \\mid T)$. We can, in theory, always use such techniques, as long as we are correct in stating the independece of variables. If, for instance, $P(W)$ was independent of E but was dependent on T, we might have over-zelously applied this technique.**"
    ]
   },
   {
@@ -312,7 +314,7 @@
     "                        &= P(FE)P(EU) * (P(EM)P(MU) + P(EF)P(FU)) \\\\\n",
     "                        &= \\frac{1}{2}\\frac{1}{4} * (\\frac{1}{4}\\frac{1}{4} + \\frac{1}{4}\\frac{1}{2}) \\\\\n",
     "                        &= \\frac{3}{128} \\\\ \\\\\n",
-    "    P(\\text{meet at U}) &= P(\\text{Dan at E}\\mid DaF) * P(\\text{Chris at E}\\mid ChE) \\\\\n",
+    "    P(\\text{meet at E}) &= P(\\text{Dan at E}\\mid DaF) * P(\\text{Chris at E}\\mid ChE) \\\\\n",
     "                        &= P(FU)P(UE) * (P(EM)P(ME) + P(EF)P(FE) + P(EU)P(UE) + P(EP)P(PE)) \\\\\n",
     "                        &= \\frac{1}{2}\\frac{1}{4} * (\\frac{1}{4}\\frac{1}{4} + \\frac{1}{4}\\frac{1}{2} + \\frac{1}{4}\\frac{1}{4} + \\frac{1}{4}\\frac{1}{2}) \\\\\n",
     "                        &= \\frac{3}{64} \\\\ \\\\\n",
@@ -526,6 +528,7 @@
    "cell_type": "code",
    "execution_count": 28,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -685,14 +688,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Odds of going bankrupt having been past Go twice: 0.14%\n"
+      "Odds of going bankrupt having been past Go twice: 0.42%\n"
      ]
     }
    ],
@@ -1165,26 +1168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "def is_valid_move(state, laststate, deltacash):\n",
-    "    '''\n",
-    "    Function to determine if a move is valid under the rules of Miniopoly\n",
-    "    '''\n",
-    "    if(state == 10 and deltacash == 0):\n",
-    "        return true\n",
-    "    \n",
-    "    else:\n",
-    "        return false"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 107,
    "metadata": {
     "collapsed": true
    },
@@ -1200,16 +1184,22 @@
     "    \n",
     "    dfPredict = pd.read_csv(\"game_log.csv\")#(\"https://raw.githubusercontent.com/chrisketelsen/csci3022/master/hmwk/hmwk02/game_log.csv\")\n",
     "    \n",
+    "    for index, row in dfPredict.iterrows():\n",
+    "        isInvalid = False\n",
+    "        for i in range(1, 20):\n",
+    "            if(is_invalid_move(row[i], row[i-1], (row[i+20]-row[i+19]), row[i+20])):\n",
+    "                isInvalid = True\n",
+    "        \n",
+    "        dfPredict.loc[dfPredict.index[index], \"Prediction\"] = \"fake\" if isInvalid else \"real\"\n",
     "    \n",
-    "    \n",
-    "    dfPredict.loc[:, \"Prediction\"] = \"real\"\n",
-    "    \n",
-    "    return dfPredict "
+    "    return dfPredict \n",
+    "\n",
+    "#predict_game_log()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 108,
    "metadata": {
     "collapsed": true
    },
@@ -1225,13 +1215,210 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "**Let's start by looking at how the rules might differ in edge cases (Passing go, amount lost while in jail, states where it's legal to gain money): **"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>S1</th>\n",
+       "      <th>S2</th>\n",
+       "      <th>S3</th>\n",
+       "      <th>S4</th>\n",
+       "      <th>S5</th>\n",
+       "      <th>S6</th>\n",
+       "      <th>S7</th>\n",
+       "      <th>S8</th>\n",
+       "      <th>S9</th>\n",
+       "      <th>S10</th>\n",
+       "      <th>S11</th>\n",
+       "      <th>S12</th>\n",
+       "      <th>S13</th>\n",
+       "      <th>S14</th>\n",
+       "      <th>S15</th>\n",
+       "      <th>S16</th>\n",
+       "      <th>S17</th>\n",
+       "      <th>S18</th>\n",
+       "      <th>S19</th>\n",
+       "      <th>S20</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>10</td>\n",
+       "      <td>23</td>\n",
+       "      <td>33</td>\n",
+       "      <td>1</td>\n",
+       "      <td>13</td>\n",
+       "      <td>22</td>\n",
+       "      <td>31</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>15</td>\n",
+       "      <td>24</td>\n",
+       "      <td>30</td>\n",
+       "      <td>30</td>\n",
+       "      <td>18</td>\n",
+       "      <td>29</td>\n",
+       "      <td>37</td>\n",
+       "      <td>7</td>\n",
+       "      <td>11</td>\n",
+       "      <td>21</td>\n",
+       "      <td>31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>4</td>\n",
+       "      <td>8</td>\n",
+       "      <td>15</td>\n",
+       "      <td>21</td>\n",
+       "      <td>29</td>\n",
+       "      <td>38</td>\n",
+       "      <td>3</td>\n",
+       "      <td>9</td>\n",
+       "      <td>18</td>\n",
+       "      <td>25</td>\n",
+       "      <td>35</td>\n",
+       "      <td>2</td>\n",
+       "      <td>11</td>\n",
+       "      <td>17</td>\n",
+       "      <td>27</td>\n",
+       "      <td>35</td>\n",
+       "      <td>3</td>\n",
+       "      <td>14</td>\n",
+       "      <td>22</td>\n",
+       "      <td>32</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>11</td>\n",
+       "      <td>23</td>\n",
+       "      <td>33</td>\n",
+       "      <td>39</td>\n",
+       "      <td>39</td>\n",
+       "      <td>39</td>\n",
+       "      <td>39</td>\n",
+       "      <td>39</td>\n",
+       "      <td>39</td>\n",
+       "      <td>39</td>\n",
+       "      <td>39</td>\n",
+       "      <td>39</td>\n",
+       "      <td>39</td>\n",
+       "      <td>39</td>\n",
+       "      <td>39</td>\n",
+       "      <td>39</td>\n",
+       "      <td>39</td>\n",
+       "      <td>39</td>\n",
+       "      <td>39</td>\n",
+       "      <td>39</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>3</td>\n",
+       "      <td>11</td>\n",
+       "      <td>22</td>\n",
+       "      <td>26</td>\n",
+       "      <td>31</td>\n",
+       "      <td>39</td>\n",
+       "      <td>7</td>\n",
+       "      <td>10</td>\n",
+       "      <td>20</td>\n",
+       "      <td>31</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>18</td>\n",
+       "      <td>23</td>\n",
+       "      <td>32</td>\n",
+       "      <td>2</td>\n",
+       "      <td>6</td>\n",
+       "      <td>10</td>\n",
+       "      <td>16</td>\n",
+       "      <td>19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>8</td>\n",
+       "      <td>18</td>\n",
+       "      <td>28</td>\n",
+       "      <td>36</td>\n",
+       "      <td>36</td>\n",
+       "      <td>36</td>\n",
+       "      <td>36</td>\n",
+       "      <td>36</td>\n",
+       "      <td>36</td>\n",
+       "      <td>36</td>\n",
+       "      <td>36</td>\n",
+       "      <td>36</td>\n",
+       "      <td>36</td>\n",
+       "      <td>36</td>\n",
+       "      <td>36</td>\n",
+       "      <td>36</td>\n",
+       "      <td>36</td>\n",
+       "      <td>36</td>\n",
+       "      <td>36</td>\n",
+       "      <td>36</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   S1  S2  S3  S4  S5  S6  S7  S8  S9  S10  S11  S12  S13  S14  S15  S16  S17  \\\n",
+       "0  10  23  33   1  13  22  31   0   6   15   24   30   30   18   29   37    7   \n",
+       "1   4   8  15  21  29  38   3   9  18   25   35    2   11   17   27   35    3   \n",
+       "4  11  23  33  39  39  39  39  39  39   39   39   39   39   39   39   39   39   \n",
+       "6   3  11  22  26  31  39   7  10  20   31    1    5   18   23   32    2    6   \n",
+       "7   8  18  28  36  36  36  36  36  36   36   36   36   36   36   36   36   36   \n",
+       "\n",
+       "   S18  S19  S20  \n",
+       "0   11   21   31  \n",
+       "1   14   22   32  \n",
+       "4   39   39   39  \n",
+       "6   10   16   19  \n",
+       "7   36   36   36  "
+      ]
+     },
+     "execution_count": 125,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dfFakes = pd.read_csv(\"game_log.csv\")\n",
+    "dfFakes = dfFakes.loc[dfFakes[\"Game\"]=='fake']\n",
+    "\n",
+    "dfJailed = dfFakes.iloc[:,:20]\n",
+    "dfJailed.head()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1241,13 +1428,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "****"
+   ]
   }
  ],
  "metadata": {
