--- a/hmwk/hmwk03/hmwk03.ipynb
+++ b/hmwk/hmwk03/hmwk03.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true,
     "scrolled": true
@@ -52,12 +52,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[b'X' b'X' b'X']\n",
+      " [b'O' b'O' b'O']\n",
+      " [b'O' b'O' b'X']]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "b'X'"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def fillfree(board, player):\n",
+    "    haveNotFilled = True\n",
+    "    while(haveNotFilled):\n",
+    "        x = np.random.randint(3)\n",
+    "        y = np.random.randint(3)\n",
+    "        if(board[x][y] != \"X\" or board[x][y] != \"O\"):\n",
+    "            board[x][y] = player\n",
+    "            print(board)\n",
+    "            haveNotFilled = False\n",
+    "            \n",
+    "def checkForWin(board):\n",
+    "    for i in range(3): #Check Cols\n",
+    "        if(board[0][i] == board[1][i] == board[2][i]):\n",
+    "            return board[0][i]\n",
+    "    for i in range(3): #Check Rows\n",
+    "        if(board[i][0] == board[i][1] == board[i][2]):\n",
+    "            return board[i][0]\n",
+    "    if(board[0][0] == board[1][1] == board[2][2]):\n",
+    "        return board[0][0]\n",
+    "    if(board[0][2] == board[1][1] == board[0][2]):\n",
+    "        return board[0][2]\n",
+    "    else:\n",
+    "        return False\n",
+    "    \n",
+    "def playGame():\n",
+    "    board = np.chararray((3, 3))\n",
+    "    hasNotWon = True\n",
+    "    cA = 0\n",
+    "    chars = [\"X\", \"O\"]\n",
+    "    while(hasNotWon):\n",
+    "        fillfree(board, chars[cA])\n",
+    "        winner = checkForWin(board)\n",
+    "        cA ^= cA\n",
+    "        if(winner != False):\n",
+    "            hasNotWon = False\n",
+    "            return winner\n",
+    "            \n",
+    "        \n",
+    "playGame()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -87,7 +145,9 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "s"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -183,7 +243,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def pmf_natural(x):\n",
@@ -200,7 +262,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
@@ -214,7 +278,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def cdf_natural(y):\n",
@@ -231,7 +297,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
@@ -339,7 +407,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def boat_count_sim(lam, num_days=int(1e3)):\n",
@@ -358,7 +428,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def boat_time_sim(lam, num_boats=int(1e3)): \n",
@@ -380,7 +452,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
@@ -394,7 +468,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
@@ -408,7 +484,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
