Studying for midterm

--- a/inclass-notebooks/lecture07solutions.ipynb
+++ b/inclass-notebooks/lecture07solutions.ipynb
@@ -205,7 +205,9 @@
   {
    "cell_type": "code",
    "execution_count": 182,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def sampling_vs_pmf(n, p, sample_size):    \n",
@@ -483,7 +485,9 @@
   {
    "cell_type": "code",
    "execution_count": 173,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def prob_win_k_of_n_games(n, k, p, q, locations):\n",
@@ -712,7 +716,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
