--- a/inclass-notebooks/lecture11notebook.ipynb
+++ b/inclass-notebooks/lecture11notebook.ipynb
@@ -44,7 +44,9 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def plinko_trial(n = 6, p = 0.5):\n",
@@ -422,7 +424,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
