--- a/inclass-notebooks/lecture13solutions.ipynb
+++ b/inclass-notebooks/lecture13solutions.ipynb
@@ -802,7 +802,9 @@
   {
    "cell_type": "code",
    "execution_count": 303,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def running_est(rolls):\n",
@@ -903,7 +905,9 @@
   {
    "cell_type": "code",
    "execution_count": 469,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def running_plot(d, r, bounds=False):\n",
@@ -1072,7 +1076,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
