--- a/inclass-notebooks/lecture11solutions.ipynb
+++ b/inclass-notebooks/lecture11solutions.ipynb
@@ -51,7 +51,9 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def plinko_trial(num_rows=6, p=0.5):\n",
@@ -497,7 +499,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
