--- a/inclass-notebooks/lecture16notebook.ipynb
+++ b/inclass-notebooks/lecture16notebook.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -38,13 +38,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "** 1/ lambda, or 0.2**"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,15 +64,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bootstripped 95% CI for the Mean: [0.17658079807151872, 0.2116200302421852]\n"
+     ]
+    }
+   ],
    "source": [
+    "# Assumes we're looking for a 95% CI\n",
     "def bootstrapped_mean(sample, num_boots=5000):\n",
-    "    CI = np.array([0,1])\n",
-    "    return CI \n",
+    "    # resample the data num_boots time\n",
+    "    # compute the sample means of each resample\n",
+    "    resampled = np.zeros(num_boots)\n",
+    "    for ii in range(num_boots):\n",
+    "        resampled[ii] = np.mean(np.random.choice(sample, size=(len(sample)), replace=True))\n",
     "    \n",
-    "bootstrapped_mean(sample)"
+    "    # compute the CI using the percentiles (2.5 and 97.5th percentile of resampled means)\n",
+    "    L = np.percentile(resampled, 2.5)\n",
+    "    U = np.percentile(resampled, 97.5)\n",
+    "    \n",
+    "    return [L, U] \n",
+    "    \n",
+    "print(\"Bootstripped 95% CI for the Mean:\", bootstrapped_mean(sample))"
    ]
   },
   {
@@ -84,12 +102,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tradish 95% CI for mean:  (0.17641584046420086, 0.21147674208726411)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from scipy.stats import norm\n",
+    "xbar = np.mean(sample)\n",
+    "xsd = 0.2\n",
+    "n = len(sample)\n",
+    "zao2 = norm.ppf(0.975)\n",
+    "SE = xsd/np.sqrt(n)\n",
+    "TCI = (xbar - zao2*SE, xbar + zao2*SE)\n",
+    "print(\"Tradish 95% CI for mean: \", TCI)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -122,7 +155,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def bootstrapped_var(sample, num_boots=5000):\n",
@@ -185,7 +220,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def bootstrapped_lam(sample, num_boots=5000):\n",
@@ -205,7 +242,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def parametric_stdev(sample, num_boots=5000):\n",
@@ -259,7 +298,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
