--- a/inclass-notebooks/lecture16notebook.ipynb
+++ b/inclass-notebooks/lecture16notebook.ipynb
@@ -154,17 +154,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bootstripped 95% CI for the Var: [0.03093265436592068, 0.055211020394035616]\n"
+     ]
+    }
+   ],
    "source": [
-    "def bootstrapped_var(sample, num_boots=5000):\n",
-    "    CI = np.array([0,1])\n",
-    "    return CI \n",
+    "def bootstrapped_mean(sample, num_boots=5000):\n",
+    "    # resample the data num_boots time\n",
+    "    # compute the sample means of each resample\n",
+    "    resampled = np.zeros(num_boots)\n",
+    "    for ii in range(num_boots):\n",
+    "        resampled[ii] = np.var(np.random.choice(sample, size=(len(sample)), replace=True))\n",
     "    \n",
-    "bootstrapped_var(sample)"
+    "    # compute the CI using the percentiles (2.5 and 97.5th percentile of resampled means)\n",
+    "    L = np.percentile(resampled, 2.5)\n",
+    "    U = np.percentile(resampled, 97.5)\n",
+    "    \n",
+    "    return [L, U] \n",
+    "    \n",
+    "print(\"Bootstripped 95% CI for the Var:\", bootstrapped_mean(sample))"
    ]
   },
   {
@@ -175,13 +190,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "**Yes.** "
+   ]
   },
   {
    "cell_type": "markdown",
