--- a/inclass-notebooks/lecture16notebook.ipynb
+++ b/inclass-notebooks/lecture16notebook.ipynb
@@ -56,7 +56,9 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "sample = np.random.exponential(1/5, size=500)"
