--- a/practicum/fall2017_practicum.ipynb
+++ b/practicum/fall2017_practicum.ipynb
@@ -40,13 +40,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 4,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import numpy as np"
    ]
   },
   {
@@ -72,12 +74,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "120"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def chris_park_time(p):\n",
+    "    time = 90\n",
+    "    spot = 0\n",
+    "    for i in range(50):\n",
+    "        time += 5\n",
+    "        spot += 1\n",
+    "        if(np.random.choice([0, 1], p=[p, 1-p]) == 1):\n",
+    "            return time + spot * 5\n",
+    "        \n",
+    "    return time + spot * 5\n",
+    "        \n",
+    "chris_park_time(0.95)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -428,7 +452,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
