Worked on Practicum

--- a/practicum/fall2017_practicum.ipynb
+++ b/practicum/fall2017_practicum.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true,
     "scrolled": true
@@ -74,33 +74,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "120"
-      ]
-     },
-     "execution_count": 55,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def chris_park_time(p):\n",
     "    time = 90\n",
     "    spot = 0\n",
     "    for i in range(50):\n",
-    "        time += 5\n",
+    "        time += 7\n",
     "        spot += 1\n",
     "        if(np.random.choice([0, 1], p=[p, 1-p]) == 1):\n",
     "            return time + spot * 5\n",
     "        \n",
-    "    return time + spot * 5\n",
+    "    return time + 180 # Secret spot\n",
     "        \n",
-    "chris_park_time(0.95)"
+    "# "
    ]
   },
   {
