Worked on Practicum

--- a/inclass-notebooks/lecture04solutions.ipynb
+++ b/inclass-notebooks/lecture04solutions.ipynb
@@ -427,7 +427,9 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def birthday_sim(num_people, num_trials=1000):\n",
@@ -520,7 +522,9 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "deck = np.array([suit+val for suit in [\"H\", \"D\", \"S\", \"C\"] for val in [\"A\", \"2\", \"3\", \"4\", \"5\", \"6\", \"7\", \"8\", \"9\", \"10\", \"11\", \"12\", \"13\"]])   \n",
@@ -642,7 +646,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
