--- a/inclass-notebooks/lecture22solutions.ipynb
+++ b/inclass-notebooks/lecture22solutions.ipynb
@@ -26,7 +26,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -131,7 +130,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -265,6 +263,7 @@
    "cell_type": "code",
    "execution_count": 36,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -802,7 +801,9 @@
   {
    "cell_type": "code",
    "execution_count": 175,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def nonlinear_data(dataset, n=30):\n",
@@ -895,7 +896,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
